# rmp_2026

./: CMakeLists.txt  README.md  package.xml
config/: artbot_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  mapping_sim_coord_config.rviz  nav2_params.yaml  robot_sim_coord_config.rviz  sim_coord_mapping_config.rviz  twist_mux.yaml
config/ambiente_0-rosbag2_2026_04_19-21_52_12/: ambiente_0-rosbag2_2026_04_19-21_52_12_0.db3  metadata.yaml
config/maps_ambiente_0/: ambiente_0_save.pgm  ambiente_0_save.yaml  ambiente_0_serial.data
config/rosbag2_2026_05_03-21_25_43/: metadata.yaml
description/models/ambiente_0/: model.config  model.sdf
description/robot/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
env-hooks/: rmp_2026.dsv.in  rmp_2026.sh.in
launch/: amcl.launch.py  joystick.launch.py  nav_with_slam.launch.py  robot_spawn.launch.py  sim_coord.launch.py  sim_coord_amcl_nav.launch.py  sim_coord_mapping.launch.py  sim_coord_robot.launch.py  sim_coord_slam_nav.launch.py  slam.launch.py  world.launch.py
worlds/: ambiente_0.sdf
