<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmp_2026</name>
  <version>1.0.0</version>
  <description>
    Introduction to ROS 2, Gazebo and SLAM for RMP university course from UFMA
  </description>
  <maintainer email="anaomscosta@gmail.com">Ana Beatriz Costa</maintainer>
  <license>Apache 2.0</license>
  <author>Ana Beatriz Costa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>